# Kernel

./: .gitignore  CMakeLists.txt  README.md
Assets/: ModelLoading.vs
Binaries/Examples/: Basic
CMake/: Globals.cmake
Docs/Wiki/: Modules.md  NOTES.md
Examples/: CMakeLists.txt
Examples/00-Basic/: Main.cpp
Examples/01-HelloModule/: Main.cpp
Examples/01-HelloStatic/: Module.cpp
Examples/Include/: HelloStatic.h
Include/Kernel/: Camera.hpp  Context.h  Debug.h  Mesh.h  Model.h  ModuleController.h  Renderer.h  Scheduler.h  Shader.h  SharedLib.h  Shell.h  Task.h  Window.h  WorkQueue.h
Include/Kernel/Graphics/: Program.h  Shader.h  Uniform.h
Include/Module/: API.h  Descriptor.h
Include/Subframe/: Language.h  Platform.h  Subframe.h
Include/Subframe/Language/: Types.h
Include/Subframe/Platform/: Architecture.h  Compiler.h  System.h
Scripts/: UnixBuild.sh
Source/: CMakeLists.txt
Source/Kernel/: Debug.cpp  ModuleController.cpp  Remotery.cpp  Scheduler.cpp  SharedLib.cpp  Task.cpp  WorkQueue.cpp
Source/Kernel/Graphics/: GLProgram.cpp  GLShader.cpp  GLUniform.cpp
Source/Kernel/OpenGL/: Model.cpp  Renderer.cpp  Shader.cpp
Source/Kernel/POSIX/: Context.cpp  Window.cpp
Source/Remotery/: Remotery.cpp
api/: api_registry.api  swarm.api
include/: kernel.h
private/: api-locator.cpp  api-registry.cpp  interface_registry.cpp  interface_registry.h  main.cpp  module-registry.cpp  module_loader.h  state.h  swarm.cpp  swarm.queue.cpp  swarm.queue.h  swarm.task.h
private/posix/: module-loader.cpp  module_loader.cpp
private/win64/: module_loader.cpp
public/: kernel.h  service-locator.h  taskman.h
source/: main.cpp  module-registry.cpp  registry-impl.cpp  registry-impl.h  state.h
source/posix/: module-loader.cpp
